[feat] POST /login & [refactor] tests/client.test.js & [fix] POST /clients swagger
