# controllers/login/router.js
@@ -1,0 +1,7 @@
+const express = require('express');
+
+const router = express.Router({ mergeParams: true });
+
+router.post('/', require('./login'));
+
+module.exports = router;
